examples/datalog/15_arithmetic/36_mixed_ops.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mixed_ops
Knowledge graph 'test_mixed_ops' created.
Switched to knowledge graph: test_mixed_ops
> .kg use test_mixed_ops
Switched to knowledge graph: test_mixed_ops
> +data[(10, 3, 2)].
Inserted 1 fact(s) into 'data'.
> result(A, B, C, R) :- data(A, B, C), R = A + B * C.
Script error: Query execution failed: Unsafe rule: Atom { relation: "result", args: [Variable("A"), Variable("B"), Variable("C"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
