examples/datalog/15_arithmetic/36_mixed_ops.dl
% Test: Mixed arithmetic operations
% Expected: Combine different operations
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_mixed_ops
.kg use test_mixed_ops

+data[(10, 3, 2)].

% a + b * c
result(A, B, C, R) :- data(A, B, C), R = A + B * C.

?- result(A, B, C, R).

.kg use default
.kg drop test_mixed_ops
